contrast color fixed as per accessibility test

--- a/portfolio.css
+++ b/portfolio.css
@@ -85,7 +85,7 @@
   }
 
   .letsconnect {
-    color: #7f8cff;
+    color: #051EFF;
     font-size: 16px;
     line-height: 24px;
     font-weight: 500;
